// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. date and times publication 1`] = `
Array [
  <time
    dateTime="2017-07-01T14:32:00.000Z"
  >
    Saturday July 01 2017, 3:32pm
  </time>,
  <span>
    , The Times
  </span>,
]
`;

exports[`2. date and sundaytimes publication 1`] = `
Array [
  <time
    dateTime="2017-07-01T14:32:00.000Z"
  >
    Saturday July 01 2017, 3:32pm
  </time>,
  <span>
    , The Sunday Times
  </span>,
]
`;

exports[`3. date and no given publication 1`] = `
<time
  dateTime="2017-07-01T14:32:00.000Z"
>
  Saturday July 01 2017, 3:32pm
</time>
`;

exports[`4. date and no day 1`] = `
<time
  dateTime="2017-07-01T14:32:00.000Z"
>
  July 01 2017, 3:32pm
</time>
`;
